Expose pagination via body for property and data types
