# apps/hash-graph/openapi/openapi.json
@@ -540,7 +540,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/GetDataTypesRequest"
+                "$ref": "#/components/schemas/GetDataTypesParams"
               }
             }
           },
@@ -549,14 +549,6 @@
         "responses": {
           "200": {
             "description": "Gets a a list of data types that satisfy the given query.",
-            "headers": {
-              "Link": {
-                "schema": {
-                  "type": "string"
-                },
-                "description": "The link to be used to query the next page of data types"
-              }
-            },
             "content": {
               "application/json": {
                 "schema": {
@@ -596,7 +588,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/GetDataTypeSubgraphRequest"
+                "$ref": "#/components/schemas/GetDataTypeSubgraphParams"
               }
             }
           },
@@ -605,14 +597,6 @@
         "responses": {
           "200": {
             "description": "Gets a subgraph rooted at all data types that satisfy the given query, each resolved to the requested depth.",
-            "headers": {
-              "Link": {
-                "schema": {
-                  "type": "string"
-                },
-                "description": "The link to be used to query the next page of data types"
-              }
-            },
             "content": {
               "application/json": {
                 "schema": {
@@ -2518,7 +2502,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/GetPropertyTypesRequest"
+                "$ref": "#/components/schemas/GetPropertyTypesParams"
               }
             }
           },
@@ -2527,14 +2511,6 @@
         "responses": {
           "200": {
             "description": "Gets a a list of property types that satisfy the given query.",
-            "headers": {
-              "Link": {
-                "schema": {
-                  "type": "string"
-                },
-                "description": "The link to be used to query the next page of property types"
-              }
-            },
             "content": {
               "application/json": {
                 "schema": {
@@ -2574,7 +2550,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/GetPropertyTypeSubgraphRequest"
+                "$ref": "#/components/schemas/GetPropertyTypeSubgraphParams"
               }
             }
           },
@@ -4883,7 +4859,7 @@
           }
         ]
       },
-      "GetDataTypeSubgraphRequest": {
+      "GetDataTypeSubgraphParams": {
         "type": "object",
         "required": [
           "filter",
@@ -4892,6 +4868,14 @@
           "includeDrafts"
         ],
         "properties": {
+          "after": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/DataTypeVertexId"
+              }
+            ],
+            "nullable": true
+          },
           "filter": {
             "$ref": "#/components/schemas/Filter"
           },
@@ -4900,6 +4884,11 @@
           },
           "includeDrafts": {
             "type": "boolean"
+          },
+          "limit": {
+            "type": "integer",
+            "nullable": true,
+            "minimum": 0
           },
           "temporalAxes": {
             "$ref": "#/components/schemas/QueryTemporalAxesUnresolved"
@@ -4913,12 +4902,20 @@
           "subgraph"
         ],
         "properties": {
+          "cursor": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/DataTypeVertexId"
+              }
+            ],
+            "nullable": true
+          },
           "subgraph": {
             "$ref": "#/components/schemas/Subgraph"
           }
         }
       },
-      "GetDataTypesRequest": {
+      "GetDataTypesParams": {
         "type": "object",
         "required": [
           "filter",
@@ -4926,11 +4923,24 @@
           "includeDrafts"
         ],
         "properties": {
+          "after": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/DataTypeVertexId"
+              }
+            ],
+            "nullable": true
+          },
           "filter": {
             "$ref": "#/components/schemas/Filter"
           },
           "includeDrafts": {
             "type": "boolean"
+          },
+          "limit": {
+            "type": "integer",
+            "nullable": true,
+            "minimum": 0
           },
           "temporalAxes": {
             "$ref": "#/components/schemas/QueryTemporalAxesUnresolved"
@@ -4944,6 +4954,14 @@
           "dataTypes"
         ],
         "properties": {
+          "cursor": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/DataTypeVertexId"
+              }
+            ],
+            "nullable": true
+          },
           "dataTypes": {
             "type": "array",
             "items": {
@@ -5204,7 +5222,7 @@
           }
         }
       },
-      "GetPropertyTypeSubgraphRequest": {
+      "GetPropertyTypeSubgraphParams": {
         "type": "object",
         "required": [
           "filter",
@@ -5213,6 +5231,14 @@
           "includeDrafts"
         ],
         "properties": {
+          "after": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/PropertyTypeVertexId"
+              }
+            ],
+            "nullable": true
+          },
           "filter": {
             "$ref": "#/components/schemas/Filter"
           },
@@ -5221,6 +5247,11 @@
           },
           "includeDrafts": {
             "type": "boolean"
+          },
+          "limit": {
+            "type": "integer",
+            "nullable": true,
+            "minimum": 0
           },
           "temporalAxes": {
             "$ref": "#/components/schemas/QueryTemporalAxesUnresolved"
@@ -5234,12 +5265,20 @@
           "subgraph"
         ],
         "properties": {
+          "cursor": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/PropertyTypeVertexId"
+              }
+            ],
+            "nullable": true
+          },
           "subgraph": {
             "$ref": "#/components/schemas/Subgraph"
           }
         }
       },
-      "GetPropertyTypesRequest": {
+      "GetPropertyTypesParams": {
         "type": "object",
         "required": [
           "filter",
@@ -5247,11 +5286,24 @@
           "includeDrafts"
         ],
         "properties": {
+          "after": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/PropertyTypeVertexId"
+              }
+            ],
+            "nullable": true
+          },
           "filter": {
             "$ref": "#/components/schemas/Filter"
           },
           "includeDrafts": {
             "type": "boolean"
+          },
+          "limit": {
+            "type": "integer",
+            "nullable": true,
+            "minimum": 0
           },
           "temporalAxes": {
             "$ref": "#/components/schemas/QueryTemporalAxesUnresolved"
@@ -5265,6 +5317,14 @@
           "propertyTypes"
         ],
         "properties": {
+          "cursor": {
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/PropertyTypeVertexId"
+              }
+            ],
+            "nullable": true
+          },
           "propertyTypes": {
             "type": "array",
             "items": {
